# docplex

./: .gitignore  CDO-layout.md  CDO.md  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
cplex/: pyproject.toml
cplex-ce/: .gitignore  pom.xml  pyproject.toml  setup.py
cplex-ce/src/cplex_ce/: __init__.py  _platform_utils.py  _pycplex.py  _pycplex_platform.py
cplex-ce/tests/: test_platform_utils.py  test_pycplex_platform.py
cplex-examples/: pyproject.toml
cplex-examples/src/main/data/: infeasible.lp
cplex-examples/src/main/python/: admipex1.py  admipex4.py  admipex6.py  admipex8.py  benders.py  fixcost1.py  globalqpex1.py  lpex1.py  lpex4.py  lpex6.py  lpex7.py  mipex3.py  mipex4.py  miqpex1.py  multiobjex1.py  qpex1.py
cplex-examples/src/test/python/: README.md  test_examples.py
cplex-native-ce/: pyproject.toml  setup.py
cplex-native-ce/src/cplex_native_ce/: __init__.py  _platform_utils.py  _pycplex_platform.py
cplex-native-ce/tests/: test_pycplex_platform.py
cplex-pe/: .gitignore  pom.xml  pyproject.toml  setup.py
cplex-pe/src/cplex_pe/: _pycplex_platform.py  _version.py
cplex/examples/: pyproject.toml
cplex/examples/src/: admipex2.py  admipex9.py  bendersatsp.py  bendersatsp2.py  blend.py  conflictex1.py  diet.py  facility.py  inout1.py  lpex2.py  mipex2.py  populate.py  qcpdual.py  qpex2.py  rates.py  transport.py  warehouse.py
cplex/examples/tests/: test_examples.py
cplex/src/cplex/: callbacks.py  constant_class.py
cplex/src/cplex/_internal/: _constants.py  _constantsenum.py  _matrices.py  _multiobj.py  _multiobjsoln.py  _parameter_classes.py  _parameter_hierarchy.py  _procedural.py  _pwl.py  _solutionstrategyenum.py
cplex/src/cplex/exceptions/: __init__.py  errors.py
cplex/src/main/python/cplex/: __init__.py  aborter.py  model_info.py  paramset.py
cplex/src/main/python/cplex/_internal/: __init__.py  _anno.py  _aux_functions.py  _baseinterface.py  _callbackinfoenum.py  _list_array_utils.py  _ostream.py  _parameters_auto.py  _subinterfaces.py
cplex/src/main/python/cplex/exceptions/: error_codes.py
cplex/tests/: cplextestcase.py  interfacetestcase.py  pytestexpertcbaftercutloop.py  pytestexpertcbempty.py  pytestexpertcbexitcutloop.py  pytestexpertcbfeasible.py  pytestexpertcbinject.py  pytestexpertcbmodify.py  pytestexpertcbprune.py  pytestexpertcbrejectall.py  pytestnodedepth.py  pytestquerybenderscuts.py  test_api_unicode.py  test_callback_unicode.py  test_conflict_interface.py  test_end.py  test_explain.py  test_ilmt.py  test_indicator_constraint_interface.py  test_linear_constraints_interface.py  test_list_array_utils.py  test_matrix_unicode.py  test_mip_starts_interface.py  test_objective_interface.py  test_output_stream.py  test_presolve_interface.py  test_quadratic_constraints_interface.py  test_quality_metrics.py  test_remove_callbacks.py  test_soln_pool_filter_interface.py  test_sos_interface.py  test_variables_interface.py  testaborter.py  testadpreex1.py  testallparams.py  testanno.py  testaux.py  testbarriersolution.py  testbasicpresolve.py  testbendersufl.py  (+67 more)
cplex/tests/data/: lpprog.lp  pwlinf.lp
docplex/: README.md  pyproject.toml  version.py
docplex-examples/: pyproject.toml
docplex-examples/src/main/python/mp/jupyter/: Benders_decomposition.ipynb  chicago_coffee_shops.ipynb  load_balancing.ipynb  nurses_pandas-multi_objective.ipynb  nurses_pandas.ipynb
docplex-examples/src/main/python/opl/cplex_models/: benders_cplex_json.py  cutstock.py  foodcsv.py  xsteel.py
docplex/cp/: __init__.py  catalog.py  config.py  expression.py  function.py  model.py  modeler.py  parameters.py  solution.py  utils.py  utils_visu.py
docplex/cp/cpo/: cpo_compiler.py  cpo_parser.py
docplex/cp/fzn/: fzn_parser.py
docplex/cp/lp/: __init__.py  lp_parser.py
docplex/cp/solver/: cpo_callback.py  environment_client.py  solver.py  solver_local.py  solver_simulator.py
docplex/examples/src/mp/jupyter/: green_truck.ipynb  marketing_campaign.ipynb  nurses_scheduling.ipynb  oil_blending.ipynb  progress.ipynb
docplex/examples/src/opl/cplex_models/: benders_cplex.py  fleet.py
docplex/examples/src/opl/cpo_models/: sched_alloc_dat_string.py  talent_cpo.py
docplex/mp/: advmodel.py  anno.py  constants.py  context.py  cplex_engine.py  ds_utils.py  engine.py  engine_factory.py  environment.py  error_handler.py  format.py  functional.py  linear.py  lp_printer.py  mfactory.py  model.py  model_reader.py  mprinter.py  numutils.py  ppretty.py  priority.py  progress.py  publish.py  pwl.py  qprogress.py  quadfact.py  relaxer.py  sdetails.py  soljson.py  solprinter.py  solsol.py  solution.py  solve_env.py  sosvarset.py  sttck.py  tck.py  utils.py  vartype.py  with_funcs.py  worker_utils.py
docplex/mp/internal/: __init__.py  json_conflict_handler.py  json_infeasibility_handler.py
docplex/mp/params/: __init__.py  cplex_params.py  parameter_hierarchy_22100.py  parameter_hierarchy_22120.py  parameters.py
docplex/mp/worker/: __init__.py  solve_hook.py  worker_env.py
docplex/src/main/python/docplex/: __init__.py  version.py
docplex/src/test/python/: advmodel_tests.py  agent_tests.py  aggregate_tests.py  build_opl_model_tests.py  checker_tests.py  checkpwl_tests.py  distrib_longtests.py  doc_tests.py  docplex_worker_api_tests.py  dvar_tests.py  expr_tests.py  functional_tests.py  get_opl_var_tests.py  install_distribtests.py  kpi_tests.py  log_output_longtests.py  log_output_tests_common.py  no_regression_tests.py  notebook_runner.py  numpy_pandas_tests.py  performance_longtests.py  pwl_function_tests.py  pwl_models_tests.py  quad_collisions.py  read_mst_cplex.py  scaling.py  sos_tests.py  testutils.py  tinyhttpproxy.py  unicode_support_longtests.py  unicode_support_tests.py  unit_docplex_tests.py  util_tests.py  vartype_tests.py  worker_environment_tests.py  xtreme_tests.py
docplex/src/test/python/docplex_tests_utils/: configuration.py  http_request_handler.py  json_comparator.py  stringutils.py
docplex/util/: cli.py  csv_utils.py  environment.py
docplex/util/dods/: project_handler.py
docs/: cp.html  (+13 more)
(+938 files in other folders)
