[metadata]
name = docplex
version = 2.29.241
description = The IBM Decision Optimization CPLEX Modeling for Python
url = https://www.ibm.com/cloud/decision-optimization-for-watson-studio
author = The IBM Decision Optimization on Cloud team
description_file = README.md
long_description = file: README.rst, CHANGELOG.rst
keywords = optimization, cplex, cpo
license = Apache 2.0
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: Science/Research
	Operating System :: Unix
	Operating System :: MacOS
	Operating System :: Microsoft
	Operating System :: OS Independent
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Software Development :: Libraries
	Topic :: System
	Topic :: Other/Nonlisted Topic
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3

[options]
	packages = find:
	install_requires = six

[options.entry_points]
console_scripts = 
	docplex = docplex.util.cli:main
