[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cplex_ce"
dynamic = ["version"]
description = "CPLEX Community Edition native libraries"
requires-python = ">=3.11,<=3.15"
dependencies = []
authors = [
    {name = "IBM ILOG CPLEX Optimization Studio"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: AIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.entry-points."cplex.native"]
ce = "cplex_ce:_pycplex"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "cplex_ce._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src",                      # makes cplex_ce importable
    "src/cplex_ce",      # makes bare internal imports work (e.g. _platform_utils)
]

# Platform-specific native libraries are filtered at build time by setup.py,
# which uses get_library_path() to include only the current platform's _internal_/<folder>.
# No static package-data glob here — that would include all platforms' libraries.