[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beta-examples"
version = "1.0.0"
description = "Cplex examples"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["cplex"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
#lite = ["beta-backend-lite"]
#full = ["beta-backend-full"]

[tool.setuptools]
package-dir = {"" = "src/main/python"}

[tool.setuptools.packages.find]
where = ["src/main/python"]

[tool.pytest.ini_options]
testpaths = ["src/test/python"]
