[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cplex-native-ce"
version = "22.1.0"
description = "CPLEX Community Edition native libraries"
requires-python = ">=3.9"
dependencies = ["cplex"]

[project.entry-points."cplex.native"]
ce = "cplex_native_ce:_pycplex"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cplex_native_ce = ["*.so", "*.pyd", "*.dylib"]