[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cplex_native_ce"
dynamic = ["version"]
description = "CPLEX Community Edition native libraries"
requires-python = ">=3.10"
dependencies = ["cplex==22.2.0.16"]
authors = [
    {name = "IBM ILOG CPLEX Optimization Studio"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: AIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.entry-points."cplex.native"]
ce = "cplex_native_ce:_pycplex"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "cplex_native_ce._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src",                      # makes cplex_native_ce importable
    "src/cplex_native_ce",      # makes bare internal imports work (e.g. _platform_utils)
]

# Platform-specific native libraries are filtered at build time by setup.py,
# which uses get_library_path() to include only the current platform's bin/<folder>.
# No static package-data glob here — that would include all platforms' libraries.