[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cplex"
version = "22.2.0.16"
description = "Core API for beta with pluggable backends"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11,<=3.15"
dependencies = ["cplex_ce"]

[project.optional-dependencies]
full = ["cplex_native_full"]

[tool.setuptools]
package-dir = {"" = "src/main/python"}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["tests"]