[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docplex-examples"
version = "1.0.0"
description = "Examples for IBM Decision Optimization CPLEX Modeling for Python (DOcplex)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
keywords = ["optimization", "cplex", "cpo", "examples", "docplex"]
authors = [
    {name = "The IBM Decision Optimization on Cloud team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Documentation",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "docplex",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
visu = [
    "matplotlib>=3.5",
    "docplex[cp]",
]

[project.urls]
Homepage = "https://www.ibm.com/cloud/decision-optimization-for-watson-studio"
Documentation = "https://ibmdecisionoptimization.github.io/docplex-doc/"
Repository = "https://github.com/IBMDecisionOptimization/docplex-examples"

[tool.setuptools]
package-dir = {"" = "src/main/python"}

[tool.setuptools.packages.find]
where = ["src/main/python"]

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py"]
testpaths = ["src/test/python"]
pythonpath = ["src/main/python", "src/test/python"]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false