[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docplex"
dynamic = ["version"]
description = "The IBM Decision Optimization CPLEX Modeling for Python"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
keywords = ["optimization", "cplex", "cpo"]
authors = [
    {name = "The IBM Decision Optimization on Cloud team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: System",
    "Topic :: Other/Nonlisted Topic",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = ["cplex"]

[project.urls]
Homepage = "https://www.ibm.com/cloud/decision-optimization-for-watson-studio"

[project.optional-dependencies]
#lite = ["beta-backend-lite"]
#full = ["beta-backend-full"]

[tool.setuptools]
package-dir = {"" = "src/main/python"}

[tool.setuptools.dynamic]
version = {attr = "docplex.version.docplex_version_string"}

[tool.setuptools.packages.find]
where = ["src/main/python"]

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py"]
testpaths = ["src/test/python"]
pythonpath = ["src/main/python", "src/test/python"]
